[package]
name = "my-substrate-blockchain"
version = "0.1.0"
edition = "2018"

[dependencies]
substrate-runtime = "2.0.0"
sp-runtime = "3.0.0"
sp-core = "3.0.0"
sc-service = "3.0.0"
sc-telemetry = { version = "0.2.0", default-features = false }
sc-timestamp = "3.0.0"
sc-consensus-aura = "3.0.0"
sc-finality-grandpa = "3.0.0"
sc-network-gossip = "3.0.0"
sc-network = "3.0.0"
sc-primitives = "3.0.0"
sc-client-api = "3.0.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
sp-api = "3.0.0"
sc-rpc = "3.0.0"
node-template-runtime = { version = "2.0.0", features = ["std", "crypto"] }

[features]
default = ["std"]
std = [
  "node-template-runtime/std",
  "sc-consensus-aura/std",
  "sc-finality-grandpa/std",
  "sc-network-gossip/std",
  "sc-network/std",
  "sc-primitives/std",
  "sc-client-api/std",
]
